--- a/paso1/package.json
+++ b/paso1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase-12",
+  "name": "clase-12-paso1",
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
@@ -11,10 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+  
     "express": "^4.21.1",
-    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
     "router": "^1.3.8"
   }
