--- a/paso2/package.json
+++ b/paso2/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "clase-12",
+  "name": "paso2",
   "version": "1.0.0",
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
   },
   "keywords": [],
@@ -11,11 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
-    "nodemon": "^3.1.7",
-    "router": "^1.3.8"
+    "nodemon": "^3.1.7"
   }
 }
